--- a/templates/docker-compose.j2
+++ b/templates/docker-compose.j2
@@ -1,8 +1,9 @@
-version: '2'
+version: '3'
 
 services:
 
   https-portal:
+    container_name: '{{ domain }}-portal'
     image: steveltn/https-portal
     volumes:
       - ./wordpress:/var/www/html
@@ -22,8 +23,23 @@ services:
       - wordpress
     restart: always
 
+  db:
+    image: mariadb
+    ports:
+      - '3306:3306'
+    volumes:
+      - ./wp-db-data:/var/lib/mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: '{{ wp_db_psw }}'
+    restart: always
+
   wordpress:
-    image: wordpress:{{ wp_version }}-{{ php_fmp_version }}
+    depends_on:
+      - db
+    container_name: '{{ domain }}-wp'
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - '9000:9000'
     volumes:
@@ -34,16 +50,12 @@ services:
       WORDPRESS_TABLE_PREFIX: '{{ wp_db_tb_pre }}'
       WORDPRESS_DB_HOST: '{{ wp_db_host }}'
       WORDPRESS_DB_PASSWORD: '{{ wp_db_psw }}'
-    links:
-      - db:mysql
     restart: always
+    logging:
+       options:
+         max-size: 200k
 
-  db:
-    image: mariadb
-    ports:
-      - '3306:3306'
-    volumes:
-      - ./wp-db-data:/var/lib/mysql
-    environment:
-      MYSQL_ROOT_PASSWORD: '{{ wp_db_psw }}'
-    restart: always
+networks:
+    default:
+       external:
+         name: '{{ domain }}-network'
